--- a/_drafts/2019-08-24-devhub.markdown
+++ b/_drafts/2019-08-24-devhub.markdown
@@ -1,12 +1,15 @@
 ---
 layout: article
-title:  "DevHub"
+title:  "How to structure project which consists different languages including Golang for back-end"
 date:   2019-08-24 23:34:00 +0200
 categories: Articles
 ---
+
+In this article I will explain (mostly to myself) how to structure a project with different parts in different programming languages including Golang for back-end, Python/Django REST for API and React/React Native for front-ends.
+
 ## Project Structure
 
-- `devhub-be` - back-end
+- `devhub-be` - back-end (spiders, parsers, indexer)
 - `devhub-be-api` - RESTful API layer for back-end
 - `devhub-fe` - front-end (generic placeholder, later shared components)
 - `devhub-fe-web` - front-end (React for web application)
