--- a/_posts/articles/2020-07-27-do-k8s-https.markdown
+++ b/_posts/articles/2020-07-27-do-k8s-https.markdown
@@ -121,4 +121,5 @@ Check [this](https://www.digitalocean.com/community/tutorials/how-to-set-up-an-n
 Other resources:
 
 - [NGINX Ingress Controller - TLS/HTTPS](https://kubernetes.github.io/ingress-nginx/user-guide/tls/#tlshttps)
-- [Automatic TSL Certificates signed by Let's Encrypt](Automatic TLS Certificates signed by Let’s Encrypt)
+- [Automatic TSL Certificates signed by Let's Encrypt](https://letsencrypt.org/docs/)
+
